--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost/sabina
-spring.datasource.username=root
-spring.datasource.password=UrbiSabina254
 
-# DDL generation
-spring.jpa.generate-ddl-auto=update
+# Local mysql database configuration.
+datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+datasource.url= jdbc:mysql://localhost/sabina
+datasource.username= thpsabina
+datasource.password= UrbiSabina254
+
+# Hibernate configuration.
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# Package to scan.
+packagesToScan= com.rest.webapi
+
+
