--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # Local mysql database configuration.
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 datasource.url= jdbc:mysql://localhost/sabina
-datasource.username= thpsabina
-datasource.password= UrbiSabina254
+datasource.username= root
+datasource.password= 
 
 # Hibernate configuration.
 hibernate.show_sql=true
