Cors configuration added. Vue Project added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # Local mysql database configuration.
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 datasource.url= jdbc:mysql://localhost/sabina
-datasource.username= root
-datasource.password= 
+datasource.username= thpsabina
+datasource.password= UrbiSabina254
 
 # Hibernate configuration.
 hibernate.show_sql=true
@@ -12,5 +12,9 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Package to scan.
 packagesToScan= com.rest.webapi
+
+#client-urls
+client= http://localhost:8081
+path.pattern = /api/**
 
 
