Fixing BusinessController Renamed vue-client folder to client Replaced vue js project with React Typescript

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 
 # Local mysql database configuration.
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-datasource.url= jdbc:mysql://localhost/sabina
-datasource.username= thpsabina
-datasource.password= UrbiSabina254
+#datasource.url= jdbc:mysql://localhost/webapi
+datasource.url=jdbc:mysql://localhost/webapi?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+datasource.username= root
+datasource.password= password
 
 # Hibernate configuration.
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Package to scan.
